--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -1227,7 +1227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 2,
    "metadata": {
     "dc": {
      "key": "73"
@@ -1236,30 +1236,18 @@
      "sample_code"
     ]
    },
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "dict expected at most 1 arguments, got 2",
-     "output_type": "error",
-     "traceback": [
-      "---------------------------------------------------------------------------",
-      "TypeError                                 Traceback (most recent call last)",
-      "<ipython-input-55-d1f67ba4f8e8> in <module>()\n      8 \n      9 # Create a dictionary where tol and max_iter are keys and the lists of their values are corresponding values\n---> 10 param_grid = dict(..., ...)\n",
-      "TypeError: dict expected at most 1 arguments, got 2"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import GridSearchCV\n",
     "# ... YOUR CODE FOR TASK 11 ...\n",
-    "from sklearn.model_selection import \n",
+    "from sklearn.model_selection import GridSearchCV\n",
     "\n",
     "# Define the grid of values for tol and max_iter\n",
-    "tol = ...\n",
-    "max_iter = ...\n",
+    "tol = [0.01, 0.001, 0.0001]\n",
+    "max_iter = [100, 150, 200]\n",
     "\n",
     "# Create a dictionary where tol and max_iter are keys and the lists of their values are corresponding values\n",
-    "param_grid = dict(..., ...)"
+    "param_grid = dict(tol=tol, max_iter=max_iter)"
    ]
   },
   {
