--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -1296,7 +1296,7 @@
    ],
    "source": [
     "# Instantiate GridSearchCV with the required parameters\n",
-    "grid_model = GridSearchCV(estimator=..., param_grid=..., cv=...)\n",
+    "grid_model = GridSearchCV(estimator=logreg, param_grid=..., cv=...)\n",
     "\n",
     "# Use scaler to rescale X and assign it to rescaledX\n",
     "rescaledX = scaler....(...)\n",
