--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -1299,7 +1299,7 @@
     "grid_model = GridSearchCV(estimator=logreg, param_grid=param_grid, cv=5)\n",
     "\n",
     "# Use scaler to rescale X and assign it to rescaledX\n",
-    "rescaledX = scaler....(...)\n",
+    "rescaledX = scaler.fit_transform(X)\n",
     "\n",
     "# Fit data to grid_model\n",
     "grid_model_result = grid_model.fit(..., ...)\n",
