--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -1302,7 +1302,7 @@
     "rescaledX = scaler.fit_transform(X)\n",
     "\n",
     "# Fit data to grid_model\n",
-    "grid_model_result = grid_model.fit(..., ...)\n",
+    "grid_model_result = grid_model.fit(rescaledX, y)\n",
     "\n",
     "# Summarize results\n",
     "best_score, best_params = ...\n",
