--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -1305,7 +1305,7 @@
     "grid_model_result = grid_model.fit(rescaledX, y)\n",
     "\n",
     "# Summarize results\n",
-    "best_score, best_params = ...\n",
+    "best_score, best_params = grid_model_result.best_score_, grid_model_result.best_params_\n",
     "print(\"Best: %f using %s\" % (..., ...))"
    ]
   }
