--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "metadata": {
     "dc": {
      "key": "3"
@@ -190,7 +190,7 @@
        "4  b  20.17  5.625  u  g  w  v  1.71  t  f   0  f  s  00120    0  +"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "metadata": {
     "dc": {
      "key": "10"
@@ -258,24 +258,26 @@
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 690 entries, 0 to 689\n",
       "Data columns (total 16 columns):\n",
-      "0     690 non-null object\n",
-      "1     690 non-null object\n",
-      "2     690 non-null float64\n",
-      "3     690 non-null object\n",
-      "4     690 non-null object\n",
-      "5     690 non-null object\n",
-      "6     690 non-null object\n",
-      "7     690 non-null float64\n",
-      "8     690 non-null object\n",
-      "9     690 non-null object\n",
-      "10    690 non-null int64\n",
-      "11    690 non-null object\n",
-      "12    690 non-null object\n",
-      "13    690 non-null object\n",
-      "14    690 non-null int64\n",
-      "15    690 non-null object\n",
+      " #   Column  Non-Null Count  Dtype  \n",
+      "---  ------  --------------  -----  \n",
+      " 0   0       690 non-null    object \n",
+      " 1   1       690 non-null    object \n",
+      " 2   2       690 non-null    float64\n",
+      " 3   3       690 non-null    object \n",
+      " 4   4       690 non-null    object \n",
+      " 5   5       690 non-null    object \n",
+      " 6   6       690 non-null    object \n",
+      " 7   7       690 non-null    float64\n",
+      " 8   8       690 non-null    object \n",
+      " 9   9       690 non-null    object \n",
+      " 10  10      690 non-null    int64  \n",
+      " 11  11      690 non-null    object \n",
+      " 12  12      690 non-null    object \n",
+      " 13  13      690 non-null    object \n",
+      " 14  14      690 non-null    int64  \n",
+      " 15  15      690 non-null    object \n",
       "dtypes: float64(2), int64(2), object(12)\n",
-      "memory usage: 86.3+ KB\n",
+      "memory usage: 86.4+ KB\n",
       "None\n",
       "\n",
       "\n"
@@ -669,7 +671,7 @@
        "689  b  35.00   3.375  u  g   c   h  8.290  f  f   0  t  g  00000    0  -"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -720,7 +722,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "metadata": {
     "dc": {
      "key": "17"
@@ -813,7 +815,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 4,
    "metadata": {
     "dc": {
      "key": "24"
@@ -845,7 +847,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -882,7 +884,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 5,
    "metadata": {
     "dc": {
      "key": "31"
@@ -958,9 +960,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": true,
     "dc": {
      "key": "38"
     },
@@ -1010,7 +1011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 7,
    "metadata": {
     "dc": {
      "key": "45"
@@ -1062,7 +1063,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 8,
    "metadata": {
     "dc": {
      "key": "52"
@@ -1107,7 +1108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 9,
    "metadata": {
     "dc": {
      "key": "59"
@@ -1153,7 +1154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 10,
    "metadata": {
     "dc": {
      "key": "66"
@@ -1167,17 +1168,17 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy of logistic regression classifier:  0.8679653679653679\n"
+      "Accuracy of logistic regression classifier:  0.8701298701298701\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "array([[183,  21],\n",
+       "array([[184,  20],\n",
        "       [ 40, 218]])"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1227,7 +1228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {
     "dc": {
      "key": "73"
@@ -1275,7 +1276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 12,
    "metadata": {
     "dc": {
      "key": "80"
@@ -1286,11 +1287,10 @@
    },
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-57-0415297de907>, line 5)",
-     "output_type": "error",
-     "traceback": [
-      "  File \"<ipython-input-57-0415297de907>\", line 5\n    rescaledX = scaler....(...)\n                        ^\nSyntaxError: invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Best: 0.850725 using {'max_iter': 100, 'tol': 0.01}\n"
      ]
     }
    ],
@@ -1306,8 +1306,15 @@
     "\n",
     "# Summarize results\n",
     "best_score, best_params = grid_model_result.best_score_, grid_model_result.best_params_\n",
-    "print(\"Best: %f using %s\" % (..., ...))"
+    "print(\"Best: %f using %s\" % (best_score, best_params))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
